# gig-tracker

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go
.sqlx/: query-57b396558aca53ff878ae0e1b2e65fbe1b285f39e898adb3613773f734799b81.json  query-67913f46d2564d1920b1127158470618b93f8b9dd11a17adf7afe8cda6227125.json  query-8b6ecdb1ceba25e120e6279cfd2735440c066c5f345fddacc06b0952e4f8422a.json  query-fc8c2b12d5d5f657ce5fa042753c29fd5eb8136d8d15efabc696d3c944eb3b0f.json
cmd/: app.go  focus.go  keys.go  message.go  tables_page.go
int/data/: app.go  artist.go  db.go  gig.go  venue.go
internal/data/: app.go  artist.go  gig.go  venue.go
internal/forms/: artist.go
internal/style/: style.go
migrations/: 20250116154213_artist.sql  20250116154733_venue.sql  20250116154758_gig.sql  20250121233123_city.sql  20250127150544_unique_artist.sql  20250128161045_create.sql  20250130153812_update_gig_pk.sql
src/: act.rs  app.rs  artist.rs  city.rs  column.rs  data_table.rs  dataset.rs  datatable.rs  date.rs  error.rs  form.rs  gig.rs  main.rs  venue.rs
src/columns/: data.rs  graph.rs  mod.rs
src/forms/: actinput.rs  artist.rs  avfield.rs  city.rs  gig.rs  listinput.rs  mod.rs  savebutton.rs  textinput.rs  venue.rs
